--- a/ProyectoCiclo3.App.Frontend/Pages/Aeropuerto/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Aeropuerto/Create.cshtml
@@ -4,12 +4,19 @@
  
 <div class="text-center">
 <form action="">
-  <label for="nombre" class="form-label">Nombre:</label>
-  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
-  <label for="edad" class="form-label">Edad:</label>
-  <input type="number" class="form-control" id="edad" name="edad" placeholder="Edad">
-  <label for="email" class="form-label">Email:</label>
-  <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+  <label for="text" class="form-label">Id:</label>
+  <input type="number" class="form-control" id="Id" name="Id" placeholder="Id">
+  <label for="Nombre" class="form-label">Nombre:</label>
+  <input type="text" class="form-control" Nombre="Nombre" name="Nombre" placeholder="Nombre">
+  <label for="Ciudad" class="form-label">Ciudad:</label>
+  <input type="text" class="form-control" Ciudad="Ciudad" name="Ciudad" placeholder="Ciudad">
+<label for="Pais" class="form-label">Pais:</label>
+  <input type="text" class="form-control" Pais="Pais" name="Pais" placeholder="Pais">
+  <label for="Coord.X" class="form-label">Coord.X:</label>
+  <input type="number" class="form-control" Coord.X="Coord.X" name="Coord.X" placeholder="Coord.X">
+  <label for="Coord.Y" class="form-label">Coord.Y:</label>
+  <input type="number" class="form-control" Coord.Y="Coord.Y" name="Coord.Y" placeholder="Coord.Y">
+
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
 </form>
