--- a/ProyectoCiclo3.App.Frontend/Pages/Aeropuerto/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Aeropuerto/List.cshtml
@@ -5,30 +5,39 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">id</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Ciudad</th>
+      <th scope="col">Pais</th>
+      <th scope="col">Coord.X</th>
+      <th scope="col">Coord.Y</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>Twitter</td>
+      <td>Virgi</td>
+      <td>Medellin</td>
+      <td>Colombia</td>
+      <td>10</td>
+      <td>2</td>
+     
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>Facebook</td>
+      <td>Fly</td>
+      <td>Cali</td>
+      <td>Colombia</td>
+      <td>5</td>
+      <td>2</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td>Larry the Bird</td>
-      <td>Arias</td>
-      <td>Instagram</td>
+       <th scope="row">1</th>
+      <td>Mexic</td>
+      <td>Maracaibo</td>
+      <td>Venezuela</td>
+      <td>10</td>
+      <td>50</td>
     </tr>
   </tbody>
 </table>
