--- a/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Avion/List">Listar aviones</a>
                         </li>
+
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Aeropuerto/Create">Registrar Aeropureto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Aeropuerto/List">Listar Aeropuerto</a>
+                        </li>
+
                         </li>
                     </ul>
                 </div>
