--- a/ProyectoCiclo3.App.Frontend/Pages/Avion/Create.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Avion/Create.cshtml
@@ -7,13 +7,16 @@
   <label for="text" class="form-label">Id:</label>
   <input type="number" class="form-control" id="Id" name="Id" placeholder="Id">
   <label for="text" class="form-label">Marca:</label>
-  <input type="text" class="form-control" id="Marca" name="Marca" placeholder="Marca">
+  <input type="text" class="form-control" Marca="Marca" name="Marca" placeholder="Marca">
   <label for="text" class="form-label">Modelo:</label>
-  <input type="text" class="form-control" id="Modelo" name="Modelo" placeholder="Modelo">
+  <input type="number" class="form-control" Modelo="Modelo" name="Modelo" placeholder="Modelo">
   <label for="text" class="form-label">Numero Asientos:</label>
-  <input type="number" class="form-control" id="Numero Asientos" name="Numero Asientos" placeholder="Numero Asientos">
-<label for="text" class="form-label">Capacidad Max:</label>
-  <input type="number" class="form-control" id="Capacidad Max" name="Capacidad Max" placeholder="Capacidad Max">
+  <input type="number" class="form-control" NumeroAsiento="Numero Asientos" name="Numero Asientos" placeholder="Numero Asientos">
+ <label for="text" class="form-label">Numero Banos:</label>
+  <input type="number" class="form-control" NumeroBanos="NumeroBanos" name="NumeroBanosx" placeholder="NumeroBanos">
+ 
+ <label for="text" class="form-label">Capacidad Max:</label>
+  <input type="number" class="form-control" CapacidadMax="Capacidad Max" name="Capacidad Max" placeholder="Capacidad Max">
   
   <hr>
   <button type="submit" class="btn btn-success">Enviar</button>
