--- a/ProyectoCiclo3.App.Frontend/Pages/Avion/List.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Avion/List.cshtml
@@ -1,39 +1,34 @@
 @page
+@model ProyectoCiclo3.App.Frontend.Pages.ListAvionModel
 @{
 }
  
-<table class="table table-hover">
-  <thead>
+<h1>Listado de Aviones</h1>
+<table class="table">
     <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Marca</th>
-      <th scope="col">Modelo</th>
-      <th scope="col">NumeroAsientos</th>
-      <th scope="col">CapacidadMax</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>4</td>
-      <td>20 kg</td>
-      
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>6</td>
-      <td>2 kg</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry the Bird</td>
-      <td>Arias</td>
-      <td>10</td>
-      <td>50 kg</td>
-    </tr>
-  </tbody>
+    <th>ID</th>
+    <th>MARCA</th>
+    <th>MODELO</th>
+     <th>NUMERO ASIENTOS</th>
+    <th>NUMERO BAÑOS</th>
+    <th>CAPACIDAD MAXIMA</th>
+  </tr>
+    @foreach (var Avion in Model.Aviones)
+    {         
+                    
+            <tr>    
+            <td>@Avion.id</td>
+            <td>@Avion.Marca </td>
+            <td>@Avion.Modelo </td>
+            <td>@Avion.NumeroAsiento</td>
+            <td>@Avion.NumeroBanos</td>
+            <td>@Avion.CapacidadMax</td>
+            <td>
+              <a class="btn btn-info" asp-page="./Details" asp-route-avionId="@Avion.id"><i class="fas fa-adjust"></i>Ver</a>
+               <a class="btn btn-info" asp-page="./Edit" asp-route-avionId="@Avion.id"><i class="fas fa-adjust"></i>Editar</a>
+              <a class="btn btn-danger" href="">Eliminar</a>
+              </td>
+        </tr>
+     
+    }
 </table>
