--- a/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/ProyectoCiclo3.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -32,11 +32,13 @@
 
 
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Aeropuerto/Create">Registrar Aeropureto</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Aeropuerto/Create">Registrar Aeropuerto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Aeropuerto/List">Listar Aeropuerto</a>
                         </li>
+
+
 
                         </li>
                     </ul>
